samples/_failures_safe/1761279873_b68013_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9386c712.c: In function ‘read_matrix_interactive’:
./samples/SAFE/__tmp_9386c712.c:153:5: error: expected expression at end of input
  153 |     for (
      |     ^~~
./samples/SAFE/__tmp_9386c712.c:153:5: error: expected declaration or statement at end of input
